--- a/servers/index.html
+++ b/servers/index.html
@@ -40,7 +40,7 @@
     window.onload = function () {
         var items = document.getElementsByClassName("menu-item");
         for (var i = 0; i < items.length; i++) {
-            var url = items[i].getElementsByTagName("a")[0].ip;
+            var url = items[i].getElementsByTagName("a")[0].id;
             if (url.includes('r3ne.net')) { // skip if url contains 'r3ne.net'
                 continue;
             }
@@ -67,12 +67,12 @@
         <div class="header menu-opened">
             <p class="vpn" style="color: white; text-align: center;">No VPN connection!</p>
             <ul class="menu">
-                <li class="menu-item"><a href="https://r3ne.net" target="_blank">R3NE.NET SERVERS</a></li>
-                <li class="menu-item" style="display:none"><a ip="http://192.168.1.1" href="pfsense.home.arpa" target="_blank">PfSense</a></li>
-                <li class="menu-item" style="display:none"><a ip="http://192.168.1.5"  href="vmware.local" target="_blank">EXSI</a></li>
-                <li class="menu-item" style="display:none"><a ip="http://192.168.10.6:9090"  href="locamente.local:9090" target="_blank">Locamente</a></li>
-                <li class="menu-item" style="display:none"><a ip="http://192.168.10.8"  href="wazuh.local" target="_blank">Wazuh</a></li>
-                <li class="menu-item" style="display:none"><a ip="http://192.168.10.10"  href="truenas.local" target="_blank">TrueNAS</a>
+                <li class="menu-item"><a id="https://r3ne.net" href="https://r3ne.net" target="_blank">R3NE.NET SERVERS</a></li>
+                <li class="menu-item" style="display:none"><a id="http://192.168.1.1" href="http://pfsense.home.arpa" target="_blank">PfSense</a></li>
+                <li class="menu-item" style="display:none"><a id="http://192.168.1.5"  href="http://vmware.local" target="_blank">EXSI</a></li>
+                <li class="menu-item" style="display:none"><a id="http://192.168.10.6:9090"  href="http://locamente.local:9090" target="_blank">Locamente</a></li>
+                <li class="menu-item" style="display:none"><a id="http://192.168.10.8"  href="http://wazuh.local" target="_blank">Wazuh</a></li>
+                <li class="menu-item" style="display:none"><a id="http://192.168.10.10"  href="http://truenas.local" target="_blank">TrueNAS</a>
                 </li>
             </ul>
         </div>
