--- a/servers/index.html
+++ b/servers/index.html
@@ -69,7 +69,7 @@
             <ul class="menu">
                 <li class="menu-item"><a id="https://r3ne.net" href="https://r3ne.net" target="_blank">R3NE.NET SERVERS</a></li>
                 <li class="menu-item" style="display:none"><a id="http://192.168.1.1" href="http://pfsense.home.arpa" target="_blank">PfSense</a></li>
-                <li class="menu-item" style="display:none"><a id="http://192.168.1.5"  href="http://vmware.local" target="_blank">EXSI</a></li>
+                <li class="menu-item" style="display:none"><a id="http://192.168.1.5"  href="http://vmware.local" target="_blank">VmWare</a></li>
                 <li class="menu-item" style="display:none"><a id="http://192.168.10.6:9090"  href="http://locamente.local:9090" target="_blank">Locamente</a></li>
                 <li class="menu-item" style="display:none"><a id="http://192.168.10.8"  href="http://wazuh.local" target="_blank">Wazuh</a></li>
                 <li class="menu-item" style="display:none"><a id="http://192.168.10.10"  href="http://truenas.local" target="_blank">TrueNAS</a>
