--- a/servers/index.html
+++ b/servers/index.html
@@ -72,7 +72,7 @@
                 <li class="menu-item" style="display:none"><a id="http://192.168.1.5"  href="http://vmware.local" target="_blank">VmWare</a></li>
                 <li class="menu-item" style="display:none"><a id="http://192.168.10.6:9090"  href="http://locamente.local:9090" target="_blank">Locamente</a></li>
                 <li class="menu-item" style="display:none"><a id="http://192.168.10.8"  href="http://wazuh.local" target="_blank">Wazuh</a></li>
-                <li class="menu-item" style="display:none"><a id="http://192.168.10.10"  href="http://truenas.local" target="_blank">TrueNAS</a>
+                <li class="menu-item" style="display:none"><a id="http://192.168.10.10"  href="https://truenas.local" target="_blank">TrueNAS</a>
                 </li>
             </ul>
         </div>
