--- a/servers/index.html
+++ b/servers/index.html
@@ -37,28 +37,25 @@
             return ping;
         }));
 
-    window.onload = function () {
-        var items = document.getElementsByClassName("menu-item");
-        for (var i = 0; i < items.length; i++) {
-            var url = items[i].getElementsByTagName("a")[0].href;
-            if (url.includes('r3ne.net')) { // skip if url contains 'r3ne.net'
-                continue;
-            }
-            var httpUrl = url.replace("http://", "https://");
-            ping(httpUrl).then((function (index) { // Use a closure to capture the value of i
-                return function (delta, url) {
-                    document.getElementsByClassName("vpn")[0].style.display = "none";
-                    console.log('Ping time was ' + String(delta) + ' ms');
-                    items[index].style.display = "contents"; // Use the captured index value
+        window.onload = function () {
+            var items = document.getElementsByClassName("menu-item");
+            for (var i = 0; i < items.length; i++) {
+                var url = items[i].getElementsByTagName("a")[0].href;
+                if (url.includes('r3ne.net')) { // skip if url contains 'r3ne.net'
+                    continue;
                 }
-            })(i)).catch(function (err) {
-                console.error('Could not ping remote URL', err);
-            });
-        }
-    };
-
-
-
+                var httpUrl = url.replace("http://", "https://");
+                ping(httpUrl).then((function (index) { // Use a closure to capture the value of i
+                    return function (delta, url) {
+                        document.getElementsByClassName("vpn")[0].style.display = "none";
+                        console.log('Ping time was ' + String(delta) + ' ms');
+                        items[index].style.display = "contents"; // Use the captured index value
+                    }
+                })(i)).catch(function (err) {
+                    console.error('Could not ping remote URL', err);
+                });
+            }
+        };
     </script>
 </head>
 
@@ -70,8 +67,10 @@
                 <li class="menu-item"><a href="https://r3ne.net" target="_blank">R3NE.NET SERVERS</a></li>
                 <li class="menu-item" style="display:none"><a href="http://192.168.1.1" target="_blank">PfSense</a></li>
                 <li class="menu-item" style="display:none"><a href="https://192.168.1.5" target="_blank">EXSI</a></li>
-                <li class="menu-item" style="display:none"><a href="https://192.168.10.6:9090" target="_blank">Locamente</a></li>
-                <li class="menu-item" style="display:none"><a href="https://192.168.10.7" target="_blank">Mail Server</a></li>
+                <li class="menu-item" style="display:none"><a href="https://192.168.10.6:9090"
+                        target="_blank">Locamente</a></li>
+                <li class="menu-item" style="display:none"><a href="https://192.168.10.7" target="_blank">Mail
+                        Server</a></li>
                 <li class="menu-item" style="display:none"><a href="https://192.168.10.8" target="_blank">Wazuh</a></li>
                 <li class="menu-item" style="display:none"><a href="https://192.168.10.10" target="_blank">TrueNAS</a>
                 </li>
