--- a/servers/index.html
+++ b/servers/index.html
@@ -66,14 +66,11 @@
             <ul class="menu">
                 <li class="menu-item"><a href="https://r3ne.net" target="_blank">R3NE.NET SERVERS</a></li>
                 <li class="menu-item" style="display:none"><a href="http://192.168.1.1" target="_blank">PfSense</a></li>
-                <li class="menu-item" style="display:none"><a href="https://192.168.1.5" target="_blank">EXSI</a></li>
-                <li class="menu-item" style="display:none"><a href="https://192.168.10.6:9090"
-                        target="_blank">Locamente</a></li>
-                <li class="menu-item" style="display:none"><a href="https://192.168.10.7" target="_blank">Mail
-                        Server</a></li>
+                <li class="menu-item" style="display:none"><a href="https://192.168.1.5" target="_blank">VmWare</a></li>
+                <li class="menu-item" style="display:none"><a href="https://192.168.10.6:9090"target="_blank">Locamente</a></li>
+                <li class="menu-item" style="display:none"><a href="https://192.168.10.7" target="_blank">MailServer</a></li>
                 <li class="menu-item" style="display:none"><a href="https://192.168.10.8" target="_blank">Wazuh</a></li>
-                <li class="menu-item" style="display:none"><a href="https://192.168.10.10" target="_blank">TrueNAS</a>
-                </li>
+                <li class="menu-item" style="display:none"><a href="https://192.168.10.10" target="_blank">TrueNAS</a></li>
             </ul>
         </div>
 </body>
