--- a/servers/index.html
+++ b/servers/index.html
@@ -8,6 +8,7 @@
     <link href="style.css" rel="stylesheet" type="text/css">
     <link rel="icon" href="../assets/icon/favicon.ico" type="image/gif" sizes="16x16">
     <link rel="apple-touch-icon" href="../assets/icon/r3nenet.png">
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <title>Servers</title>
     <script>
         (function (root, factory) {
@@ -64,13 +65,15 @@
         <div class="header menu-opened">
             <p class="vpn" style="color: white; text-align: center;">No VPN connection!</p>
             <ul class="menu">
-                <li class="menu-item"><a href="https://r3ne.net" target="_blank">R3NE.NET SERVERS</a></li>
+                <li class="menu-item"><a href="https://r3ne.net" target="_blank">R3NE.NET</a></li>
+                <li class="menu-item"><a href="https://cloud.r3ne.net" target="_blank">CLOUD.R3NE.NET</a></li>
                 <li class="menu-item" style="display:none"><a href="http://192.168.1.1" target="_blank">PfSense</a></li>
                 <li class="menu-item" style="display:none"><a href="https://192.168.1.5" target="_blank">VmWare</a></li>
                 <li class="menu-item" style="display:none"><a href="https://192.168.10.6:9090"target="_blank">Locamente</a></li>
                 <li class="menu-item" style="display:none"><a href="https://192.168.10.7" target="_blank">MailServer</a></li>
                 <li class="menu-item" style="display:none"><a href="https://192.168.10.8" target="_blank">Wazuh</a></li>
                 <li class="menu-item" style="display:none"><a href="https://192.168.10.10" target="_blank">TrueNAS</a></li>
+                <li class="menu-item" style="display:none"><a href="https://192.168.10.10:8283" target="_blank">Nextcloud</a></li>
             </ul>
         </div>
 </body>
