--- a/servers/index.html
+++ b/servers/index.html
@@ -65,7 +65,7 @@
         <div class="header menu-opened">
             <p class="vpn" style="color: white; text-align: center;">No VPN connection!</p>
             <ul class="menu">
-                <li class="menu-item"><a href="https://r3ne.net/servers" target="_blank" style="font-size: 20px;">Refrech</a></li>
+                <li class="menu-item"><a href="https://r3ne.net/servers" target="_blank" style="font-size: 20px; display: contents;">Refrech</a></li>
                 <li class="menu-item"><a href="https://r3ne.net" target="_blank">R3NE.NET</a></li>
                 <li class="menu-item"><a href="https://cloud.r3ne.net" target="_blank">CLOUD.R3NE.NET</a></li>
                 <li class="menu-item" style="display:none"><a href="http://192.168.1.1" target="_blank">PfSense</a></li>
