--- a/servers/index.html
+++ b/servers/index.html
@@ -65,9 +65,9 @@
         <div class="header menu-opened">
             <p class="vpn" style="color: white; text-align: center;">No VPN connection!</p>
             <ul class="menu">
-                <li class="menu-item">Refresh<a href="https://r3ne.net/servers" target="_blank" style="font-size: 20px; display: contents;"></a></li>
-                <li class="menu-item"><a href="https://r3ne.net" target="_blank">R3NE.NET</a></li>
-                <li class="menu-item"><a href="https://cloud.r3ne.net" target="_blank">CLOUD.R3NE.NET</a></li>
+                <li class="menu-item"><a href="https://r3ne.net/servers" target="_blank" style="font-size: 15px; display: contents;">Refresh</a></li>
+                <li class="menu-item"><a href="https://r3ne.net" target="_blank">R3ne.net</a></li>
+                <li class="menu-item"><a href="https://cloud.r3ne.net" target="_blank">Cloud.r3ne.net</a></li>
                 <li class="menu-item" style="display:none"><a href="http://192.168.1.1" target="_blank">PfSense</a></li>
                 <li class="menu-item" style="display:none"><a href="https://192.168.1.5" target="_blank">VmWare</a></li>
                 <li class="menu-item" style="display:none"><a href="https://192.168.10.6:9090"target="_blank">Locamente</a></li>
