--- a/servers/index.html
+++ b/servers/index.html
@@ -9,6 +9,9 @@
     <link rel="icon" href="../assets/icon/favicon.ico" type="image/gif" sizes="16x16">
     <link rel="apple-touch-icon" href="../assets/icon/r3nenet.png">
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="Servers">
+    <meta name="mobile-web-app-capable" content="yes">
     <title>Servers</title>
     <script>
         (function (root, factory) {
