--- a/servers/index.html
+++ b/servers/index.html
@@ -46,6 +46,7 @@
             for (var i = 0; i < items.length; i++) {
                 var url = items[i].getElementsByTagName("a")[0].href;
                 if (url.includes('r3ne.net')) { // skip if url contains 'r3ne.net'
+                    items[i].style.display = "block";
                     continue;
                 }
                 var httpUrl = url.replace("http://", "https://");
@@ -53,7 +54,7 @@
                     return function (delta, url) {
                         document.getElementsByClassName("vpn")[0].style.display = "none";
                         console.log('Ping time was ' + String(delta) + ' ms');
-                        items[index].style.display = "contents"; // Use the captured index value
+                        items[index].style.display = "block"; // Use the captured index value
                     }
                 })(i)).catch(function (err) {
                     console.error('Could not ping remote URL', err);
@@ -70,7 +71,7 @@
             <ul class="menu">
                 <li class="menu-item"><a href="https://r3ne.net/servers" target="_blank" style="font-size: 15px; display: contents;">Refresh</a></li>
                 <li class="menu-item"><a href="https://r3ne.net" target="_blank">Website</a></li>
-                <li class="menu-item"><a href="https://cloud.r3ne.net" target="_blank">Cloud</a></li>
+                <li class="menu-item" style="display:none"><a href="https://cloud.r3ne.net" target="_blank">Cloud</a></li>
                 <li class="menu-item" style="display:none"><a href="http://192.168.1.1" target="_blank">PfSense</a></li>
                 <li class="menu-item" style="display:none"><a href="https://192.168.1.5" target="_blank">VmWare</a></li>
                 <li class="menu-item" style="display:none"><a href="https://192.168.10.6:9090"target="_blank">Locamente</a></li>
