--- a/servers/index.html
+++ b/servers/index.html
@@ -69,7 +69,7 @@
         <div class="header menu-opened">
             <p class="vpn" style="color: white; text-align: center;">No VPN connection!</p>
             <ul class="menu">
-                <li class="menu-item"><a href="https://r3ne.net/servers" target="_blank" style="font-size: 15px; display: contents;">Refresh</a></li>
+                <li class="menu-item"><a href="https://r3ne.net/servers" style="font-size: 15px; display: contents;">Refresh</a></li>
                 <li class="menu-item"><a href="https://r3ne.net" target="_blank">Website</a></li>
                 <li class="menu-item" style="display:none"><a href="https://cloud.r3ne.net" target="_blank">Cloud</a></li>
                 <li class="menu-item" style="display:none"><a href="http://192.168.1.1" target="_blank">PfSense</a></li>
