--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                                 <a href="https://top.gg/bot/940968101627969598" target="_blank"
                                     class="button blue gradient cropBottom ae-7 fromCenter"><i
                                         class="material-icons small">add_box</i>Top.gg</a>
-                                <a href="https://github.com/JAAKKQ/CryptoDiscordBot" target="_blank"
+                                <a href="https://github.com/JAAKKQ/pyexhange" target="_blank"
                                     class="button blue gradient cropBottom ae-7 fromCenter"><i
                                         class="material-icons small">cloud_download</i>Source</a>
                             </li>
