--- a/index.html
+++ b/index.html
@@ -113,8 +113,7 @@
                                 <p class="ae-3"><span class="opacity-8"></span>Cryptocurrency trading has become popular
                                     due to the potential for high returns and control over financial future. However, it
                                     can be risky. This Discord bot allows users to trade crypto without real money,
-                                    allowing them to gain experience and develop skills without risk. It also offers
-                                    free crypto alerts to inform users when the price of a coin reaches a certain level
+                                    allowing them to gain experience and develop skills without risk.
                                 </p>
                                 <p class="ae-4"><span id="BotDynDescription" class="opacity-8">Currently serving 0
                                         Discord servers with 0 users in total.</span></p>
