--- a/DiscordBot/index.html
+++ b/DiscordBot/index.html
@@ -25,7 +25,7 @@
 		<p style="text-align: center;"><input type="submit" value="View Privacy Policy" /></p>
 	</form>
 
-	<form action="https://r3ne.net/">
+	<form action="../index.html">
 		<p style="text-align: center;"><input type="submit" value="Go Home" /></p>
 	</form>
 
