--- a/ipfs/index.html
+++ b/ipfs/index.html
@@ -162,11 +162,8 @@
                                 <h1 class="ae-2">Vinyl Record Collection Manager</h1>
                                 <div class="ae-3">
                                     <p class="opacity-8">A command-line interface (CLI) program that allows easy access
-                                        and management of personal vinyl record collection. Utilizes the Discogs API to
-                                        retrieve information about records and allows search by query. User
-                                        can also use commands to perform actions such as viewing, sorting, deleting
-                                        records, and creating custom records. Convenient tool for vinyl collectors who
-                                        want to keep track of their collection and access information quickly and easily
+                                        and management of personal vinyl record collection. Convenient tool for vinyl collectors who
+                                        want to keep track of their collection and access information quickly and *easily*
                                         from the command line.
                                     </p>
                                 </div>
