--- a/servers/index.html
+++ b/servers/index.html
@@ -73,6 +73,7 @@
                 <li class="menu-item"><a href="https://r3ne.net" target="_blank">Website</a></li>
                 <li class="menu-item" style="display:none"><a href="https://cloud.r3ne.net" target="_blank">Cloud</a></li>
                 <li class="menu-item" style="display:none"><a href="http://192.168.1.1" target="_blank">PfSense</a></li>
+                <li class="menu-item" style="display:none"><a href="http://192.168.1.1:3000" target="_blank">Monitor Traffic</a></li>
                 <li class="menu-item" style="display:none"><a href="https://192.168.1.5" target="_blank">VmWare</a></li>
                 <li class="menu-item" style="display:none"><a href="https://192.168.10.6:9090"target="_blank">Locamente</a></li>
                 <li class="menu-item" style="display:none"><a href="https://192.168.10.7" target="_blank">MailServer</a></li>
