--- a/records/index.html
+++ b/records/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="logo.gif">
+    <link rel="apple-touch-icon" href="logo.gif">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="Vinyylit">
+    <meta name="mobile-web-app-capable" content="yes">
     <title>Renen Levyt</title>
 </head>
 
