--- a/records/index.html
+++ b/records/index.html
@@ -24,7 +24,7 @@
             <input type="text" id="search-input" placeholder="Search records..." autocomplete="off">
         </form>
         <div id="results"></div>
-        <script src="search.js"></script>
+        <script type="text/javascript" importance="high" src="search.js"></script>
     </div>
 </body>
 
