JS loaded check

--- a/records/index.html
+++ b/records/index.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+    <p class="loaded?" style="color: red;">JS not loaded!</p>
     <button class="btn" onclick="window.location.href='https://r3ne.net/records';"><i class="fa fa-refresh"></i> Refresh</button>
     <!-- search.html -->
     <div class="container">
