--- a/records/index.html
+++ b/records/index.html
@@ -25,7 +25,10 @@
             <input type="text" id="search-input" placeholder="Search records..." autocomplete="off">
         </form>
         <div id="results"></div>
-        <script type="text/javascript" importance="high" src="search.js"></script>
+        <script type="text/javascript" importance="high" src="search.js">
+            var items = document.getElementsByClassName("loaded?");
+items[0].style.display = "none";
+        </script>
     </div>
 </body>
 
