--- a/cv/rene.html
+++ b/cv/rene.html
@@ -10,7 +10,7 @@
   <br /><br /><br />Besides IT I also like music and woodworking. 
   <br /><br /><br />I am currently studying Information and Communications Technology as a
   dual qualification program at Helsinki Business College.
-  <br /><br /><br />You can checkout my projects on my resume, but if you are more tech savy, here is my
+  <br /><br /><br />You can checkout some of my projects on my <a href="https://r3ne.net">website</a>, but if you are more tech savy, here is my
   <a href="https://github.com/JAAKKQ"> GitHub</a> link.
 </p>
 <p>You can visit my LinkedIn, here: <a href="https://www.linkedin.com/in/r3ne/">LinkedIn</a> <br /></p>
