--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                     })
                             </script>
                             <li class="col-6-30 left box-73">
-                                <h1 class="ae-2">Bitcoin Discord Bot</h1>
+                                <h1 class="ae-2">Cryptocurrency exchange for learning</h1>
                                 <p class="ae-3"><span class="opacity-8"></span>Cryptocurrency trading has become popular
                                     due to the potential for high returns and control over financial future. However, it
                                     can be risky. This Discord bot allows users to trade crypto without real money,
