--- a/index.html
+++ b/index.html
@@ -159,9 +159,7 @@
                                     <p class="opacity-8">Beryllium is a first-person shooter multiplayer game that pits
                                         terrorists and counter-terrorists against each other. The terrorists' goal is to
                                         plant a bomb while the counter-terrorists' goal is to defuse it. Players can
-                                        also win by eliminating all members of the opposing team. Although the
-                                        development of Beryllium has been halted, the game still exists and can be
-                                        played offline.</p>
+                                        also win by eliminating all members of the opposing team.</p>
                                     <p class="opacity-8">If you would like to try it, send me a email so I can give you
                                         a key!</p>
                                 </div>
