--- a/records/index.html
+++ b/records/index.html
@@ -13,7 +13,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="Vinyylit">
     <meta name="mobile-web-app-capable" content="yes">
-    <title>Renen Levyt</title>
+    <title>Record Collection</title>
 </head>
 
 <body>
